--- a/index.html
+++ b/index.html
@@ -286,7 +286,6 @@
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. 
 					</blockquote>
 				</div>
-
 				<div class="item">
 					<img src="http://fakeimg.pl/100/" alt="">
 					<blockquote>
@@ -297,16 +296,21 @@
 				<div class="item">
 					<img src="http://fakeimg.pl/100/" alt="">
 					<blockquote>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. 
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
 					</blockquote>
 				</div>
 
 			</div>
 		</div>
 	</div>
+	
+	<div id="instagram">
+		<h3>我們的 Instagram</h3>
+		
+	</div>
 
 	<footer id="contact">
-		<h2>聊聊你的產品</h2>
+		<h2><a href="#">聊聊你的產品<i class="fa fa-comments" aria-hidden="true"></i></a></h2>
 	</footer>
 
 	<!--jQuery--> 
